--- a/pages/contact-us/self-help-after-pathway.html
+++ b/pages/contact-us/self-help-after-pathway.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
 	<meta name="author" content="">
-	<title>Pathway - Self Help Page</title>
+	<title>Pathway - After Pathway</title>
 	
 	<!-- Browser Icons -->
 	<link rel="shortcut icon" href="/working-build/docs-assets/ico/favicon.png">
@@ -29,7 +29,7 @@
 	<!-- Bootstrap Core CSS -->
 	<link href="/working-build/dist/css/bootstrap.min.css" rel="stylesheet">
 	<!-- Page Specific Stylesheet -->
-	<link href="/working-build/styles/self_help_page.css" rel="stylesheet">
+	<link href="/working-build/styles/help.css" rel="stylesheet">
 </head>
 <body>
 <!-- Header Start -->
@@ -38,7 +38,7 @@
     <ul class="nav orange-bar">
       <li class="header-column visible-xs pull-left">&nbsp;</li>
       <li class="header-column pull-left"> <a id="pathway-logo" title="pathway logo" class="navbar-brand img-responsive hidden-xs" href="/working-build/"><span class="sr-only">Pathway: In Partnership With BYU-Idaho</span></a> <a id="pathway-mobile-logo" title="pathway mobile logo" class="center-block navbar-brand visible-xs" href="index.htm"><span class="sr-only">Pathway: In Partnership With BYU-Idaho</span></a></li>
-      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="/working-build/pages/contact-us/have-a-question.html">Contact Us <img src="/working-build/img/speechbubble.png" width="13" height="11" alt="speech"></a>
+      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="/working-build/pages/contact-us/help.html">Contact Us <img src="/working-build/img/speechbubble.png" width="13" height="11" alt="speech"></a>
        <form class="navbar-right pull-right ng-pristine ng-valid">
         <!-- Sign-in / User button -->
         <div class="btn-group">
@@ -91,9 +91,9 @@
         <div id="breadCrumb" class="breadCrumb module">
             <ul>
                 <li class="first"><a href="/working-build/">Home</a></li>
-                <li  class="last" >Self Help Page</li>
+                <li ><a href="/working-build/pages/contact-us/help.html">Help</a></li>
                 
-                <li class="last"></li> 
+                <li class="last">After Pathway</li> 
             </ul>
         </div>
     </div>
@@ -102,19 +102,19 @@
 
 
 <!-- Start to the content area -->
-<div id="main-container" class="container">
+<div id="main-container" class="container self-help-page">
 	<div class="row row-offcanvas row-offcanvas-right">
 		<div class="col-xs-12">
 
 			<div id="morebyuidegree" class="hero pf-page-header show">
 				<img alt="icon" src="/working-build/img/contact-us/Have-a-Question/After-Pathway-Icon-Mini.png" />
-				<h5 class="heading red">After Pathway</h5>
-				<h1 class="heading" id="Standard">BYU-Idaho Degree Options</h1>
+				<h1 class="heading red">After Pathway</h1>
+				<h2 class="heading" id="Standard">BYU-Idaho Degree Options</h2>
 			</div>
 			<div class="pf-section show">
 				<h4 class="accordion-heading">What degrees are available through the BYU-Idaho Online Degree Program?</h4>
 				<div id="onlinedegrees" class="answer accordion">
-					<p>A list of available degree options may be found on BYU-Idaho’s <a href="http://www.byui.edu/online/degrees-and-programs">Online Learning</a> website.</p>
+					<p>A list of available degree options may be found on BYU-Idaho’s <a target="_blank" href="http://www.byui.edu/online/degrees-and-programs">Online Learning</a> website.</p>
 				</div>
 			</div>
 			<div class="pf-section show">
@@ -131,7 +131,7 @@
 			<div class="pf-section show">
 				<h4 class="accordion-heading">What new degrees will be offered in the future?</h4>
 				<div id="futuredegrees" class="answer accordion">
-					<p>Regularly check BYU-Idaho’s <a href="http://www.byui.edu/online/degrees-and-programs">Online Learning</a> website to view the most up-to-date online programs offered through the university.</p>
+					<p>Regularly check BYU-Idaho’s <a target="_blank" href="http://www.byui.edu/online/degrees-and-programs">Online Learning</a> website to view the most up-to-date online programs offered through the university.</p>
 				</div>
 			</div>
 			<div class="pf-section show">
@@ -139,11 +139,9 @@
 				<div id="changemajor" class="answer accordion">
 					<p>Majors are declared at the time a student starts the BYU-Idaho Online Degree Program. Students who wish to change their major should contact their BYU-Idaho academic advisor.</p>
 				</div>
-			</div>
+			</div><br/><br/>
 			<div id="moreapplytobyui" class="hero pf-page-header show">
-				<img alt="icon" src="/working-build/img/contact-us/Have-a-Question/After-Pathway-Icon-Mini.png" />
-				<h5 class="heading red">After Pathway</h5>
-				<h1 class="heading" id="Standard">Applying to BYU-Idaho</h1>
+				<h2 class="heading" id="Standard">Applying to BYU-Idaho</h2>
 			</div>
 			<div class="pf-section show">
 				<h4 class="accordion-heading">What are the requirements for Pathway students who want to enter the BYU-Idaho Online Degree Program after Pathway?</h4>
@@ -152,26 +150,26 @@
 					<ul>
 						<li>Complete Pathway with a minimum “B” average (3.0 cumulative GPA).</li>
 						<li>Obtain an ecclesiastical endorsement from their bishop.</li>
-						<li>Commit to live the <a href="http://www.byui.edu/student-honor-office/ces-honor-code">CES Honor Code</a>.</li>
+						<li>Commit to live the <a target="_blank" href="http://www.byui.edu/student-honor-office/ces-honor-code">CES Honor Code</a>.</li>
 					</ul></p>
 				</div>
 			</div>
 			<div class="pf-section show">
 				<h4 class="accordion-heading">How do I apply to the BYU-Idaho Online Degree Program?</h4>
 				<div id="howtoapply" class="answer accordion">
-					<p>Click <a href="http://www.byui.edu/online/application">here</a> for information about applying to the BYU-Idaho Online Degree Program.</p>
+					<p>Click <a target="_blank" href="http://www.byui.edu/online/application">here</a> for information about applying to the BYU-Idaho Online Degree Program.</p>
 				</div>
 			</div>
 			<div class="pf-section show">
 				<h4 class="accordion-heading">Where can I get help applying to the BYU-Idaho Online Degree Program?</h4>
 				<div id="gethelpapplying" class="answer accordion">
-					<p>Contact BYU-Idaho <a href="http://www.byui.edu/admissions/connect-with-us">Admissions</a> for help with applying to the BYU-Idaho Online Degree Program.</p>
+					<p>Contact BYU-Idaho <a target="_blank" href="http://www.byui.edu/admissions/connect-with-us">Admissions</a> for help with applying to the BYU-Idaho Online Degree Program.</p>
 				</div>
 			</div>
 			<div class="pf-section show">
 				<h4 class="accordion-heading">Can I apply to attend BYU-Idaho on campus?</h4>
 				<div id="applyoncampus" class="answer accordion">
-					<p>Of course! Please note, however, that students who come to the BYU-Idaho campus pay the full campus tuition rate. Pathway students interested in applying to come to campus should call BYU-Idaho <a href="http://www.byui.edu/admissions/connect-with-us">Admissions</a> for details.</p>
+					<p>Of course! Please note, however, that students who come to the BYU-Idaho campus pay the full campus tuition rate. Pathway students interested in applying to come to campus should call BYU-Idaho <a target="_blank" href="http://www.byui.edu/admissions/connect-with-us">Admissions</a> for details.</p>
 				</div>
 			</div>
 			<div class="pf-section show">
@@ -197,19 +195,17 @@
 				<div id="associate" class="answer accordion">
 					<p>The only way for individuals to start the BYU-Idaho Online Degree Program without first going through Pathway is if they previously obtained 15 or more credits at any Church college (BYU-Idaho, BYU, BYU-Hawaii, or LDS Business College).</p>
 				</div>
-			</div>
+			</div><br/><br/>
 			<div id="morebyuituition" class="hero pf-page-header show">
-				<img alt="icon" src="/working-build/img/contact-us/Have-a-Question/After-Pathway-Icon-Mini.png" />
-				<h5 class="heading red">After Pathway</h5>
-				<h1 class="heading" id="Standard">BYU-Idaho Tuition</h1>
+				<h2 class="heading" id="Standard">BYU-Idaho Tuition</h2>
 			</div>
 			<div class="pf-section show">
 				<h4 class="accordion-heading">What is the tuition rate for the BYU-Idaho Online Degree Program?</h4>
 				<div id="onlinetuition" class="answer accordion">
 					<p>Students who enter the BYU-Idaho Online Degree Program after Pathway continue to pay the same tuition rate they paid during Pathway (except for the RN to BSN program). Tuition may increase annually.
 					<ul>
-						<li>Click <a href="https://pathway.lds.org/main/costcalculator?language=true">here</a> for tuition information for Pathway's <a href="https://pathway.lds.org/main/standard">Standard</a> version.</li>
-						<li>Click <a href="https://pathway.lds.org/main/costcalculator">here</a> for tuition information for Pathway's <a href="https://pathway.lds.org/main/language">L</a> version.</li>
+						<li>Click <a target="_blank" href="https://pathway.lds.org/main/costcalculator?language=true">here</a> for tuition information for Pathway's <a target="_blank" href="https://pathway.lds.org/main/standard">Standard</a> version.</li>
+						<li>Click <a target="_blank" href="https://pathway.lds.org/main/costcalculator">here</a> for tuition information for Pathway's <a target="_blank" href="https://pathway.lds.org/main/language">L</a> version.</li>
 					</ul>
 					</p>
 				</div>
@@ -217,19 +213,17 @@
 			<div class="pf-section show">
 				<h4 class="accordion-heading">Will I have to buy textbooks for courses in the BYU-Idaho Online Degree Program?</h4>
 				<div id="textbooks" class="answer accordion">
-					<p>Yes, additional charges for textbooks and additional course fees may be required. Students can purchase textbooks through the <a href="https://www.byuistore.com">University Store</a> or other online retailers.</p>
+					<p>Yes, additional charges for textbooks and additional course fees may be required. Students can purchase textbooks through the <a target="_blank" href="https://www.byuistore.com">University Store</a> or other online retailers.</p>
 				</div>
 			</div>
 			<div class="pf-section show">
 				<h4 class="accordion-heading">What is the tuition rate to attend BYU-Idaho on campus?</h4>
 				<div id="oncampustuition" class="answer accordion">
-					<p>Pathway students who attend BYU-Idaho on campus after Pathway will pay the regular <a href="http://www.byui.edu/admissions/costs">campus tuition rate</a>.</p>
+					<p>Pathway students who attend BYU-Idaho on campus after Pathway will pay the regular <a target="_blank" href="http://www.byui.edu/admissions/costs">campus tuition rate</a>.</p>
 				</div>
-			</div>
+			</div><br/><br/>
 			<div id="moretranscriptcertificates" class="hero pf-page-header show">
-				<img alt="icon" src="/working-build/img/contact-us/Have-a-Question/After-Pathway-Icon-Mini.png" />
-				<h5 class="heading red">After Pathway</h5>
-				<h1 class="heading" id="Standard">Transcripts & Pathway Certificates</h1>
+				<h2 class="heading" id="Standard">Transcripts & Pathway Certificates</h2>
 			</div>
 			<div class="pf-section show">
 				<h4 class="accordion-heading">How do I get a Pathway transcript to send to BYU-Idaho or other colleges?</h4>
@@ -241,7 +235,7 @@
 				<h4 class="accordion-heading">How do my institute credits transfer to BYU-Idaho?</h4>
 				<div id="institutecredits" class="answer accordion">
 					<p>BYU-Idaho considers evaluation of transferrable institute course credits only with an official institute of religion transcript. Official transcripts must be mailed in a sealed envelope from the institute and signed by the institute coordinator or an authorized representative at the student's completion of Pathway. BYU-Idaho will not evaluate transcripts submitted via fax or any other method deemed unsecure by the university. Multiple transcripts from the same institute can be sent in the same envelope. The transcripts only need to be submitted once to BYU-Idaho.</p>
-					<p>To ensure timely processing, official transcripts should be sent to the <a href="http://www.byui.edu/admissions">BYU-Idaho Admissions Office</a> as grades are posted. Typical processing time is 2–4 weeks from the time the transcript is received to appearance on the student's BYU-Idaho transcript. Transcripts should be sent to:</p>
+					<p>To ensure timely processing, official transcripts should be sent to the <a target="_blank" href="http://www.byui.edu/admissions">BYU-Idaho Admissions Office</a> as grades are posted. Typical processing time is 2–4 weeks from the time the transcript is received to appearance on the student's BYU-Idaho transcript. Transcripts should be sent to:</p>
 					<p>Brigham Young University-Idaho<br/>
 					Admissions Office<br/>
 					120 Kimball Building<br/>
@@ -254,18 +248,16 @@
 				<div id="pathwaycertificate" class="answer accordion">
 					<p>To be determined.</p>
 				</div>
-			</div>
+			</div><br/><br/>
 			<div id="moreotheroptions" class="hero pf-page-header show">
-				<img alt="icon" src="/working-build/img/contact-us/Have-a-Question/After-Pathway-Icon-Mini.png" />
-				<h5 class="heading red">After Pathway</h5>
-				<h1 class="heading" id="Standard">Other Options</h1>
+				<h2 class="heading" id="Standard">Other Options</h2>
 			</div>
 			<div class="pf-section show">
 				<h4 class="accordion-heading">What are my options after Pathway?</h4>
 				<div id="otheroptions" class="answer accordion">
 					<p>Following the completion of Pathway, students may apply to join the BYU-Idaho Online Degree Program; attend BYU-Idaho as an on-campus student; enroll in a local university, college, or trade school; seek employment; or pursue a variety of other desires.</p>
 				</div>
-			</div>
+			</div><br/><br/>
 
 		</div>
 	</div>
