--- a/pages/contact-us/self-help-courses-gatherings.html
+++ b/pages/contact-us/self-help-courses-gatherings.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
 	<meta name="author" content="">
-	<title>Pathway - Self Help Page</title>
+	<title>Pathway - Courses &amp; Gatherings</title>
 	
 	<!-- Browser Icons -->
 	<link rel="shortcut icon" href="/working-build/docs-assets/ico/favicon.png">
@@ -29,7 +29,7 @@
 	<!-- Bootstrap Core CSS -->
 	<link href="/working-build/dist/css/bootstrap.min.css" rel="stylesheet">
 	<!-- Page Specific Stylesheet -->
-	<link href="/working-build/styles/self_help_page.css" rel="stylesheet">
+	<link href="/working-build/styles/help.css" rel="stylesheet">
 </head>
 <body>
 <!-- Header Start -->
@@ -38,7 +38,7 @@
     <ul class="nav orange-bar">
       <li class="header-column visible-xs pull-left">&nbsp;</li>
       <li class="header-column pull-left"> <a id="pathway-logo" title="pathway logo" class="navbar-brand img-responsive hidden-xs" href="/working-build/"><span class="sr-only">Pathway: In Partnership With BYU-Idaho</span></a> <a id="pathway-mobile-logo" title="pathway mobile logo" class="center-block navbar-brand visible-xs" href="index.htm"><span class="sr-only">Pathway: In Partnership With BYU-Idaho</span></a></li>
-      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="/working-build/pages/contact-us/have-a-question.html">Contact Us <img src="/working-build/img/speechbubble.png" width="13" height="11" alt="speech"></a>
+      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="/working-build/pages/contact-us/help.html">Contact Us <img src="/working-build/img/speechbubble.png" width="13" height="11" alt="speech"></a>
        <form class="navbar-right pull-right ng-pristine ng-valid">
         <!-- Sign-in / User button -->
         <div class="btn-group">
@@ -91,9 +91,9 @@
         <div id="breadCrumb" class="breadCrumb module">
             <ul>
                 <li class="first"><a href="/working-build/">Home</a></li>
-                <li  class="last" >Self Help Page</li>
+                <li ><a href="/working-build/pages/contact-us/help.html">Help</a></li>
                 
-                <li class="last"></li> 
+                <li class="last">Courses &amp; Gatherings</li> 
             </ul>
         </div>
     </div>
@@ -102,14 +102,14 @@
 
 
 <!-- Start to the content area -->
-<div id="main-container" class="container">
+<div id="main-container" class="container self-help-page">
 	<div class="row row-offcanvas row-offcanvas-right">
 		<div class="col-xs-12">
 
 			<div id="morepathwaycourses" class="hero pf-page-header show">
 				<img alt="icon" src="/working-build/img/contact-us/Have-a-Question/Courses-&-Gatherings-Icon-Mini.png" />
-				<h5 class="heading teal">Courses & Gatherings</h5>
-				<h1 class="heading" id="Standard">Pathway Courses</h1>
+				<h1 class="heading teal">Courses & Gatherings</h1>
+				<h2 class="heading" id="Standard">Pathway Courses</h2>
 			</div>
 			<div class="pf-section show">
 				<h4 class="accordion-heading">What courses do I take during Pathway?</h4>
@@ -117,21 +117,21 @@
 					<p>Each semester during Pathway, students take a light courseload consisting of both academic and religious education. Pathway’s academic courses are offered online through BYU-Idaho. Religion classes are offered through local institute programs or through BYU-Idaho online, depending on a student’s age.</p>
 					<p>Click a link below for a list of Pathway courses:
 					<ul>
-						<li><a href="https://pathway.lds.org/main/CourseDescriptions">Standard version courses</a> (for students who are fluent in English)</li>
-						<li><a href="https://pathway.lds.org/main/CourseDescriptions?language=True">L version courses</a> (for students with intermediate-low English proficiency)</li>
+						<li><a target="_blank" href="https://pathway.lds.org/main/CourseDescriptions">Standard version courses</a> (for students who are fluent in English)</li>
+						<li><a target="_blank" href="https://pathway.lds.org/main/CourseDescriptions?language=True">L version courses</a> (for students with intermediate-low English proficiency)</li>
 					</ul></p>
 				</div>
 			</div>
 			<div class="pf-section show">
 				<h4 class="accordion-heading">Which institute courses do 18–30-year-old Pathway students take each semester during Pathway?</h4>
 				<div id="institutecourses18-30" class="answer accordion">
-					<p>The institute courses 18–30-year-old students take vary at each institute location. Students should contact their <a href="http://institute.lds.org/find-institute">local institute</a> to find out which courses are offered.</p>
+					<p>The institute courses 18–30-year-old students take vary at each institute location. Students should contact their <a target="_blank" href="http://institute.lds.org/find-institute">local institute</a> to find out which courses are offered.</p>
 				</div>
 			</div>
 			<div class="pf-section show">
 				<h4 class="accordion-heading">What day do my Pathway courses begin?</h4>
 				<div id="firstday" class="answer accordion">
-					<p>To find out the first day of online classes, visit our <a href="https://pathway.lds.org/main/join">Join Pathway</a> webpage, and scroll to the bottom of the page and select a semester to view.</p>
+					<p>To find out the first day of online classes, visit our <a target="_blank" href="https://pathway.lds.org/main/join">Join Pathway</a> webpage, and scroll to the bottom of the page and select a semester to view.</p>
 					<p>For 18–30-year old students taking institute, the first day of institute classes varies by location. Students should contact their local institute or Pathway missionaries for more information.</p>
 				</div>
 			</div>
@@ -144,7 +144,7 @@
 			<div class="pf-section show">
 				<h4 class="accordion-heading">Can I substitute credits from other schools or universities to replace Pathway courses?</h4>
 				<div id="substitutecredit" class="answer accordion">
-					<p>Students cannot substitute an academic course taken at another school for a Pathway academic course. However, students who can show proof of having previously completed the religion courses FDREL 121, 122, and/or 200 for credit from BYU-Idaho are not required to retake the course(s) and can contact <a href="https://pathway.lds.org/main/advisingandsupport">Pathway Support</a> to request an exception.</p>
+					<p>Students cannot substitute an academic course taken at another school for a Pathway academic course. However, students who can show proof of having previously completed the religion courses FDREL 121, 122, and/or 200 for credit from BYU-Idaho are not required to retake the course(s) and can contact <a target="_blank" href="https://pathway.lds.org/main/advisingandsupport">Pathway Support</a> to request an exception.</p>
 				</div>
 			</div>
 			<div class="pf-section show">
@@ -162,7 +162,7 @@
 			<div class="pf-section show">
 				<h4 class="accordion-heading">Can I retake a Pathway course?</h4>
 				<div id="retakecourse" class="answer accordion">
-					<p>Yes. For detailed information, see <a href="http://www.byui.edu/pathway/handbook/#/section/3.4">Section 3.4 of the Pathway Handbook</a>.</p>
+					<p>Yes. For detailed information, see <a target="_blank" href="http://www.byui.edu/pathway/handbook/#/section/3.4">Section 3.4 of the Pathway Handbook</a>.</p>
 				</div>
 			</div>
 			<div class="pf-section show">
@@ -170,16 +170,14 @@
 				<div id="requiredcoursealredycredited" class="answer accordion">
 					<p>All 18–30-year-old Pathway students are required to take one institute course per semester. If the course being taught in a given semester is one a student has already taken for credit, the student can consider taking a different institute class if one is available. Students in this situation should discuss options with their local institute director.</p>
 				</div>
-			</div>
+			</div><br/><br/>
 			<div id="moreassignmentsgrades" class="hero pf-page-header show">
-				<img alt="icon" src="/working-build/img/contact-us/Have-a-Question/Courses-&-Gatherings-Icon-Mini.png" />
-				<h5 class="heading teal">Courses & Gatherings</h5>
 				<h1 class="heading" id="Standard">Assignments & Grades</h1>
 			</div>
 			<div class="pf-section show">
 				<h4 class="accordion-heading">Whom do I contact for help or issues with my online courses?</h4>
 				<div id="onlineissues" class="answer accordion">
-					<p>Students should contact their online instructor(s) for questions, concerns, or other issues with their courses. If instructors are not responsive, students may contact <a href="https://pathway.lds.org/main/advisingandsupport">Pathway Support</a>.</p>
+					<p>Students should contact their online instructor(s) for questions, concerns, or other issues with their courses. If instructors are not responsive, students may contact <a target="_blank" href="https://pathway.lds.org/main/advisingandsupport">Pathway Support</a>.</p>
 				</div>
 			</div>
 			<div class="pf-section show">
@@ -187,10 +185,8 @@
 				<div id="failedclass" class="answer accordion">
 					<p>Students who fail a course are encouraged to retake it for a higher grade. Failing grades significantly impact a student’s cumulative GPA, which could have an effect on their eligibility when applying for future educational opportunities and programs.</p>
 				</div>
-			</div>
+			</div><br/><br/>
 			<div id="moredropwithdraw" class="hero pf-page-header show">
-				<img alt="icon" src="/working-build/img/contact-us/Have-a-Question/Courses-&-Gatherings-Icon-Mini.png" />
-				<h5 class="heading teal">Courses & Gatherings</h5>
 				<h1 class="heading" id="Standard">Drop/Withdraw</h1>
 			</div>
 			<div class="pf-section show">
@@ -199,7 +195,7 @@
 					<p>Withdrawing from Pathway removes students from all current courses and prevents students from registering for future Pathway courses. Students who withdraw and desire to join the program later will need to reapply.</p>
 					<p>To withdraw from Pathway, do the following:
 						<ol>
-							<li>Log in to <a href="https://pathway.lds.org">pathway.lds.org</a>.</li>
+							<li>Log in to <a target="_blank" href="https://pathway.lds.org">pathway.lds.org</a>.</li>
 							<li>Click the arrow next to your name to open a dropdown menu.</li>
 							<li>Select “Withdraw from Pathway”.</li>
 						</ol>
@@ -211,10 +207,8 @@
 				<div id="withdrawcourse" class="answer accordion">
 					<p>No. A student’s only option for dropping courses is to completely withdraw from Pathway.</p>
 				</div>
-			</div>
+			</div><br/><br/>
 			<div id="moreinstructors" class="hero pf-page-header show">
-				<img alt="icon" src="/working-build/img/contact-us/Have-a-Question/Courses-&-Gatherings-Icon-Mini.png" />
-				<h5 class="heading teal">Courses & Gatherings</h5>
 				<h1 class="heading" id="Standard">Instructors</h1>
 			</div>
 			<div class="pf-section show">
@@ -228,13 +222,11 @@
 							<li>File an anonymous complaint: Students might do this when they want to inform Pathway administration regarding a minor situation. (Example: instructor not responding to email)</li>
 							<li>File a formal grievance: Students might file a formal grievance when they are experiencing a major issue with an instructor, or when filing an anonymous complaint has not solved the problem. These complaints are not anonymous. (Examples: instructor harassing a student, instructor accusing a student of cheating without evidence)</li>
 						</ul>
-						Complaints may be filed by contacting <a href="https://pathway.lds.org/main/advisingandsupport">Pathway Support</a>.</li>
+						Complaints may be filed by contacting <a target="_blank" href="https://pathway.lds.org/main/advisingandsupport">Pathway Support</a>.</li>
 					</ol></p>
 				</div>
-			</div>
+			</div><br/><br/>
 			<div id="moregatherings" class="hero pf-page-header show">
-				<img alt="icon" src="/working-build/img/contact-us/Have-a-Question/Courses-&-Gatherings-Icon-Mini.png" />
-				<h5 class="heading teal">Courses & Gatherings</h5>
 				<h1 class="heading" id="Standard">Gatherings</h1>
 			</div>
 			<div class="pf-section show">
@@ -263,7 +255,7 @@
 					<p>To find a gathering location in a city you are traveling to, do the following:
 					<ul>
 						<li>
-							Search for a <a href="http://pathway.lds.org/finder/world">Pathway location</a>, and contact the local Pathway missionaries.
+							Search for a <a target="_blank" href="http://pathway.lds.org/finder/world">Pathway location</a>, and contact the local Pathway missionaries.
 							<ul>
 								<li>Contact information for each Pathway location is listed on individual location pages.</li>
 							</ul>
@@ -274,15 +266,15 @@
 			<div class="pf-section show">
 				<h4 class="accordion-heading">I want to learn more about Pathway by visiting a Pathway gathering. What do I need to do?</h4>
 				<div id="visitingagathering" class="answer accordion">
-					<p>To schedule a visit to a Pathway gathering, complete the Pathway “<a href="https://byui.az1.qualtrics.com/jfe/form/SV_3mwtzS9u0NgVnQV">Visit a Location</a>” form. The local Pathway missionaries or a member of Pathway Support will contact you to schedule your visit and provide further instructions.</p>
+					<p>To schedule a visit to a Pathway gathering, complete the Pathway “<a target="_blank" href="https://byui.az1.qualtrics.com/jfe/form/SV_3mwtzS9u0NgVnQV">Visit a Location</a>” form. The local Pathway missionaries or a member of Pathway Support will contact you to schedule your visit and provide further instructions.</p>
 				</div>
 			</div>
 			<div class="pf-section show">
 				<h4 class="accordion-heading">I’m moving; how do I change to a different Pathway site? </h4>
 				<div id="moving" class="answer accordion">
-					<p>Contact <a href="https://pathway.lds.org/main/advisingandsupport">Pathway Support</a> for assistance.</p>
+					<p>Contact <a target="_blank" href="https://pathway.lds.org/main/advisingandsupport">Pathway Support</a> for assistance.</p>
 				</div>
-			</div>
+			</div><br/><br/>
 
 		</div>
 	</div>
