--- a/pages/contact-us/self-help-speaking-partners.html
+++ b/pages/contact-us/self-help-speaking-partners.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
 	<meta name="author" content="">
-	<title>Pathway - Self Help Page</title>
+	<title>Pathway - Speaking Partners</title>
 	
 	<!-- Browser Icons -->
 	<link rel="shortcut icon" href="/working-build/docs-assets/ico/favicon.png">
@@ -29,7 +29,7 @@
 	<!-- Bootstrap Core CSS -->
 	<link href="/working-build/dist/css/bootstrap.min.css" rel="stylesheet">
 	<!-- Page Specific Stylesheet -->
-	<link href="/working-build/styles/self_help_page.css" rel="stylesheet">
+	<link href="/working-build/styles/help.css" rel="stylesheet">
 </head>
 <body>
 <!-- Header Start -->
@@ -38,7 +38,7 @@
     <ul class="nav orange-bar">
       <li class="header-column visible-xs pull-left">&nbsp;</li>
       <li class="header-column pull-left"> <a id="pathway-logo" title="pathway logo" class="navbar-brand img-responsive hidden-xs" href="/working-build/"><span class="sr-only">Pathway: In Partnership With BYU-Idaho</span></a> <a id="pathway-mobile-logo" title="pathway mobile logo" class="center-block navbar-brand visible-xs" href="index.htm"><span class="sr-only">Pathway: In Partnership With BYU-Idaho</span></a></li>
-      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="/working-build/pages/contact-us/have-a-question.html">Contact Us <img src="/working-build/img/speechbubble.png" width="13" height="11" alt="speech"></a>
+      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="/working-build/pages/contact-us/help.html">Contact Us <img src="/working-build/img/speechbubble.png" width="13" height="11" alt="speech"></a>
        <form class="navbar-right pull-right ng-pristine ng-valid">
         <!-- Sign-in / User button -->
         <div class="btn-group">
@@ -91,9 +91,9 @@
         <div id="breadCrumb" class="breadCrumb module">
             <ul>
                 <li class="first"><a href="/working-build/">Home</a></li>
-                <li  class="last" >Self Help Page</li>
+                <li ><a href="/working-build/pages/contact-us/help.html">Help</a></li>
                 
-                <li class="last"></li> 
+                <li class="last">Speaking Partners</li> 
             </ul>
         </div>
     </div>
@@ -102,36 +102,34 @@
 
 
 <!-- Start to the content area -->
-<div id="main-container" class="container">
+<div id="main-container" class="container self-help-page">
 	<div class="row row-offcanvas row-offcanvas-right">
 		<div class="col-xs-12">
 
 			<div id="morefindingpartner" class="hero pf-page-header show">
 				<img alt="icon" src="/working-build/img/contact-us/Have-a-Question/Speaking-Partners-Icon-Mini.png" />
-				<h5 class="heading green">Speaking Partners</h5>
-				<h1 class="heading" id="Standard">Finding a Partner</h1>
+				<h1 class="heading green">Speaking Partners</h1>
+				<h2 class="heading" id="Standard">Finding a Partner</h2>
 			</div>
 			<div class="pf-section show">
 				<h4 class="accordion-heading">I am a student in Pathway’s L Version. How do I find a speaking partner?</h4>
 				<div id="findaspeakingpartner" class="answer accordion">
 					<p>Students currently enrolled in Pathway’s L version can find information regarding how to find a speaking partner mentor by logging into their academic course and clicking the “Speaking Partner Registration” link in the “Introduction Lesson” folder.</p>
 				</div>
-			</div>
+			</div><br/><br/>
 			<div id="morealternateassignments" class="hero pf-page-header show">
-				<img alt="icon" src="/working-build/img/contact-us/Have-a-Question/Speaking-Partners-Icon-Mini.png" />
-				<h5 class="heading green">Speaking Partners</h5>
-				<h1 class="heading" id="Standard">Alternate Assignments</h1>
+				<h2 class="heading" id="Standard">Alternate Assignments</h2>
 			</div>
 			<div class="pf-section show">
 				<h4 class="accordion-heading">I need an alternate assignment — how do I get one?</h4>
 				<div id="alternateassignment" class="answer accordion">
-					<p>Alternate assignments are available for students who cannot reasonably complete the speaking partner assignment. Students who feel they need an alternate assignment should contact <a href="https://pathway.lds.org/main/advisingandsupport">Pathway Support</a> to determine eligibility.</p>
+					<p>Alternate assignments are available for students who cannot reasonably complete the speaking partner assignment. Students who feel they need an alternate assignment should contact <a target="_blank" href="https://pathway.lds.org/main/advisingandsupport">Pathway Support</a> to determine eligibility.</p>
 				</div>
 			</div>
 			<div class="pf-section show">
 				<h4 class="accordion-heading">How do I qualify for an alternate assignment?</h4>
 				<div id="qualifyalternate" class="answer accordion">
-					<p>Contact <a href="https://pathway.lds.org/main/advisingandsupport">Pathway Support</a> to determine eligibility.</p>
+					<p>Contact <a target="_blank" href="https://pathway.lds.org/main/advisingandsupport">Pathway Support</a> to determine eligibility.</p>
 				</div>
 			</div>
 			<div class="pf-section show">
@@ -139,22 +137,18 @@
 				<div id="dontwantto" class="answer accordion">
 					<p>No, participating as a speaking partner is a requirement and is one of the primary ways students in Pathway’s L version improve their English abilities.</p>
 				</div>
-			</div>
+			</div><br/><br/>
 			<div id="morespeakingpartnersregistration" class="hero pf-page-header show">
-				<img alt="icon" src="/working-build/img/contact-us/Have-a-Question/Speaking-Partners-Icon-Mini.png" />
-				<h5 class="heading green">Speaking Partners</h5>
-				<h1 class="heading" id="Standard">Registration</h1>
+				<h2 class="heading" id="Standard">Registration</h2>
 			</div>
 			<div class="pf-section show">
 				<h4 class="accordion-heading">How do I register to be a speaking partner volunteer or mentor?</h4>
 				<div id="volunteer" class="answer accordion">
-					<p>Please register and set availability <a href="https://pathway.lds.org/main/signup">here</a>.</p>
+					<p>Please register and set availability <a target="_blank" href="https://pathway.lds.org/main/signup">here</a>.</p>
 				</div>
-			</div>
+			</div><br/><br/>
 			<div id="morevolunteerquestions" class="hero pf-page-header show">
-				<img alt="icon" src="/working-build/img/contact-us/Have-a-Question/Speaking-Partners-Icon-Mini.png" />
-				<h5 class="heading green">Speaking Partners</h5>
-				<h1 class="heading" id="Standard">Volunteer Questions</h1>
+				<h2 class="heading" id="Standard">Volunteer Questions</h2>
 			</div>
 			<div class="pf-section show">
 				<h4 class="accordion-heading">What's the difference between Pathway and Speaking Partners?</h4>
@@ -177,13 +171,13 @@
 			<div class="pf-section show">
 				<h4 class="accordion-heading">Do I need to have teaching or tutoring experience?</h4>
 				<div id="teachingexperience" class="answer accordion">
-					<p>No. The main purpose of the speaking partner visits is to provide English interaction opportunities for non-native English-speaking students to practice their speaking and listening skills. Mentors who are interested in improving their speaking partner visits may read the <a href="https://pathway.lds.org/main/guidelines">Volunteer Guidelines</a>.</p>
+					<p>No. The main purpose of the speaking partner visits is to provide English interaction opportunities for non-native English-speaking students to practice their speaking and listening skills. Mentors who are interested in improving their speaking partner visits may read the <a target="_blank" href="https://pathway.lds.org/main/guidelines">Volunteer Guidelines</a>.</p>
 				</div>
 			</div>
 			<div class="pf-section show">
 				<h4 class="accordion-heading">What do we talk about, and how much preparation is required before each visit?</h4>
 				<div id="howtoprepare" class="answer accordion">
-					<p>Mentors do not need to prepare material or discussion topics. Click <a href="https://pathway.lds.org/main/materials">here</a> to access the discussion materials for each Pathway course.</p>
+					<p>Mentors do not need to prepare material or discussion topics. Click <a target="_blank" href="https://pathway.lds.org/main/materials">here</a> to access the discussion materials for each Pathway course.</p>
 				</div>
 			</div>
 			<div class="pf-section show">
@@ -195,7 +189,7 @@
 			<div class="pf-section show">
 				<h4 class="accordion-heading">Do I need to have a webcam?</h4>
 				<div id="webcam" class="answer accordion">
-					<p>Yes. Most computer devices have webcams built-in. However, webcams can be purchased for very reasonable prices at places like <a href="http://www.walmart.com">Walmart</a>, <a href="http://www.target.com">Target</a>, <a href="http://www.newegg.com">Newegg.com</a>, or <a href="http://www.amazon.com">Amazon.com</a>.</p>
+					<p>Yes. Most computer devices have webcams built-in. However, webcams can be purchased for very reasonable prices at places like <a target="_blank" href="http://www.walmart.com">Walmart</a>, <a target="_blank" href="http://www.target.com">Target</a>, <a target="_blank" href="http://www.newegg.com">Newegg.com</a>, or <a target="_blank" href="http://www.amazon.com">Amazon.com</a>.</p>
 				</div>
 			</div>
 			<div class="pf-section show">
@@ -207,8 +201,8 @@
 			<div class="pf-section show">
 				<h4 class="accordion-heading">I / my partner missed the appointment. What should I do?</h4>
 				<div id="missedappointment" class="answer accordion">
-					<p>First, do everything possible to reschedule beforehand. If one party forgot or missed the appointment, he/she should send an email to his/her partner to apologize for missing the session. Students who are participating as a speaking partner mentor as part of their ENG 106 assignment will have to forfeit the points for failing to show.</p>
-					<p>Volunteer mentors are not obligated to meet again that week if their partner missed the appointment.</p>
+					<p>First, do everything possible to reschedule beforehand. If one party forgot or missed the appointment, he/she should send an email to his/her partner to apologize for missing the session. Students who are participating as a speaking partner mentor as part of their ENG 106 assignment will have to forfeit the points for failing to show.<br/><br/>
+					Volunteer mentors are not obligated to meet again that week if their partner missed the appointment.</p>
 				</div>
 			</div>
 			<div class="pf-section show">
@@ -216,7 +210,7 @@
 				<div id="mentormember" class="answer accordion">
 					<p>Speaking partner volunteers must be a member of The Church of Jesus Christ of Latter-day Saints.</p>
 				</div>
-			</div>
+			</div><br/><br/>
 
 		</div>
 	</div>
