--- a/pages/contact-us/self-help-student-honor.html
+++ b/pages/contact-us/self-help-student-honor.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
 	<meta name="author" content="">
-	<title>Pathway - Self Help Page</title>
+	<title>Pathway - Other Topics</title>
 	
 	<!-- Browser Icons -->
 	<link rel="shortcut icon" href="/working-build/docs-assets/ico/favicon.png">
@@ -29,7 +29,7 @@
 	<!-- Bootstrap Core CSS -->
 	<link href="/working-build/dist/css/bootstrap.min.css" rel="stylesheet">
 	<!-- Page Specific Stylesheet -->
-	<link href="/working-build/styles/self_help_page.css" rel="stylesheet">
+	<link href="/working-build/styles/help.css" rel="stylesheet">
 </head>
 <body>
 <!-- Header Start -->
@@ -38,7 +38,7 @@
     <ul class="nav orange-bar">
       <li class="header-column visible-xs pull-left">&nbsp;</li>
       <li class="header-column pull-left"> <a id="pathway-logo" title="pathway logo" class="navbar-brand img-responsive hidden-xs" href="/working-build/"><span class="sr-only">Pathway: In Partnership With BYU-Idaho</span></a> <a id="pathway-mobile-logo" title="pathway mobile logo" class="center-block navbar-brand visible-xs" href="index.htm"><span class="sr-only">Pathway: In Partnership With BYU-Idaho</span></a></li>
-      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="/working-build/pages/contact-us/have-a-question.html">Contact Us <img src="/working-build/img/speechbubble.png" width="13" height="11" alt="speech"></a>
+      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="/working-build/pages/contact-us/help.html">Contact Us <img src="/working-build/img/speechbubble.png" width="13" height="11" alt="speech"></a>
        <form class="navbar-right pull-right ng-pristine ng-valid">
         <!-- Sign-in / User button -->
         <div class="btn-group">
@@ -91,9 +91,9 @@
         <div id="breadCrumb" class="breadCrumb module">
             <ul>
                 <li class="first"><a href="/working-build/">Home</a></li>
-                <li  class="last" >Self Help Page</li>
+                <li ><a href="/working-build/pages/contact-us/help.html">Help</a></li>
                 
-                <li class="last"></li> 
+                <li class="last">Other Topics</li> 
             </ul>
         </div>
     </div>
@@ -102,21 +102,21 @@
 
 
 <!-- Start to the content area -->
-<div id="main-container" class="container">
+<div id="main-container" class="container self-help-page">
 	<div class="row row-offcanvas row-offcanvas-right">
 		<div class="col-xs-12">
 
 			<div id="others-student-honor" class="hero pf-page-header show">
-				<img alt="icon" src="/working-build/img/contact-us/Have-a-Question/" />
-				<h5 class="heading ">Other Topics</h5>
-				<h1 class="heading" id="Standard">Student Honor</h1>
+				<img alt="icon" src="/working-build/img/contact-us/Other-Topics.png" />
+				<h1 class="heading ">Other Topics</h1>
+				<h2 class="heading" id="Standard">Student Honor</h2>
 			</div>
 			<div class="pf-section show">
 				<h4 class="accordion-heading">Are Pathway students required to live the BYU-Idaho Honor Code?</h4>
 				<div id="honorcode" class="answer accordion">
-					<p>Pathway students are encouraged to strive to live the BYU-Idaho Honor Code, but are not required to do so as a condition of enrollment. (However, Pathway students who join the BYU-Idaho Online Degree Program after Pathway will be required to live the BYU-Idaho Honor Code.)</p>
+					<p>Pathway students are encouraged to strive to live the <a target="_blank" href="http://www.byui.edu/student-honor-office/ces-honor-code">BYU-Idaho Honor Code</a>, but are not required to do so as a condition of enrollment. (However, Pathway students who join the BYU-Idaho Online Degree Program after Pathway will be required to live the BYU-Idaho Honor Code.)</p>
 				</div>
-			</div>
+			</div><br/><br/>
 
 		</div>
 	</div>
