--- a/pages/contact-us/self-help-enrollment.html
+++ b/pages/contact-us/self-help-enrollment.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
 	<meta name="author" content="">
-	<title>Pathway - Self Help Page</title>
+	<title>Pathway - Enrollment</title>
 	
 	<!-- Browser Icons -->
 	<link rel="shortcut icon" href="/working-build/docs-assets/ico/favicon.png">
@@ -29,7 +29,7 @@
 	<!-- Bootstrap Core CSS -->
 	<link href="/working-build/dist/css/bootstrap.min.css" rel="stylesheet">
 	<!-- Page Specific Stylesheet -->
-	<link href="/working-build/styles/self_help_page.css" rel="stylesheet">
+	<link href="/working-build/styles/help.css" rel="stylesheet">
 </head>
 <body>
 <!-- Header Start -->
@@ -38,7 +38,7 @@
     <ul class="nav orange-bar">
       <li class="header-column visible-xs pull-left">&nbsp;</li>
       <li class="header-column pull-left"> <a id="pathway-logo" title="pathway logo" class="navbar-brand img-responsive hidden-xs" href="/working-build/"><span class="sr-only">Pathway: In Partnership With BYU-Idaho</span></a> <a id="pathway-mobile-logo" title="pathway mobile logo" class="center-block navbar-brand visible-xs" href="index.htm"><span class="sr-only">Pathway: In Partnership With BYU-Idaho</span></a></li>
-      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="/working-build/pages/contact-us/have-a-question.html">Contact Us <img src="/working-build/img/speechbubble.png" width="13" height="11" alt="speech"></a>
+      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="/working-build/pages/contact-us/help.html">Contact Us <img src="/working-build/img/speechbubble.png" width="13" height="11" alt="speech"></a>
        <form class="navbar-right pull-right ng-pristine ng-valid">
         <!-- Sign-in / User button -->
         <div class="btn-group">
@@ -91,9 +91,9 @@
         <div id="breadCrumb" class="breadCrumb module">
             <ul>
                 <li class="first"><a href="/working-build/">Home</a></li>
-                <li  class="last" >Self Help Page</li>
+                <li ><a href="/working-build/pages/contact-us/help.html">Help</a></li>
                 
-                <li class="last"></li> 
+                <li class="last">Enrollment</li> 
             </ul>
         </div>
     </div>
@@ -102,35 +102,35 @@
 
 
 <!-- Start to the content area -->
-<div id="main-container" class="container">
+<div id="main-container" class="container self-help-page">
 	<div class="row row-offcanvas row-offcanvas-right">
 		<div class="col-xs-12">
 		
 			<div id="moreapply" class="hero pf-page-header show">
 				<img alt="icon" src="/working-build/img/contact-us/Have-a-Question/Enrollment-Icon-Mini.png" />
-				<h5 class="heading orange">Applying to Pathway</h5>
-				<h1 class="heading" id="Standard">Enrollement</h1>
+				<h1 class="heading orange">Enrollment</h1>
+				<h2 class="heading" id="Standard">Applying to Pathway</h2>
 			</div>
 			<div class="pf-section show">
 				<h4 class="accordion-heading">How and when can I apply for Pathway?</h4>
 				<div id="howtoapply" class="answer accordion">
-					<p>Applying to Pathway is simple. Click <a href="https://pathway.lds.org/main/join">here</a> for instructions and deadlines.</p>
+					<p>Applying to Pathway is simple. Click <a target="_blank" href="https://pathway.lds.org/main/join">here</a> for instructions and deadlines.</p>
 				</div>
 				<h4 class="accordion-heading">What are the requirements to participate in Pathway?</h4>
 				<div id="whatrequirements" class="answer accordion">
-					<p>To view a list of requirements to participate in Pathway, visit our <a href="https://pathway.lds.org/main/join">Join Pathway</a> page.</p>
+					<p>To view a list of requirements to participate in Pathway, visit our <a target="_blank" href="https://pathway.lds.org/main/join">Join Pathway</a> page.</p>
 				</div>
 				<h4 class="accordion-heading">How old must I be to participate in Pathway?</h4>
 				<div id="howold" class="answer accordion">
 					<p>Applicants who are 17 and 18 years old are required to have a high school diploma or equivalent to be admitted to Pathway, while those ages 19+ are not required to have these credentials. Applicants younger than age 17 are not eligible for admission, except in certain international locations.</p>
 				</div>
-				<h4 class="accordion-heading">Do I need a high school diploma (or eqivalent) to enroll in Pathway?</h4>
+				<h4 class="accordion-heading">Do I need a high school diploma (or equivalent) to enroll in Pathway?</h4>
 				<div id="highschooldiploma" class="answer accordion">
 					<p>Applicants who are 17 and 18 years old are required to have a high school diploma or equivalent to be admitted to Pathway, while those ages 19+ are not required to have these credentials.</p>
 				</div>
 				<h4 class="accordion-heading">Can high school students enroll in Pathway?</h4>
 				<div id="highschoolstudents" class="answer accordion">
-					<p>No, students must have completed high school (or an equivalent) to be eligible to enroll in Pathway.</p>
+					<p>No, students under age 19 must have completed high school (or an equivalent) to be eligible to enroll in Pathway.</p>
 				</div>
 				<h4 class="accordion-heading">Do I need an ecclesiastical endorsement to participate in Pathway?</h4>
 				<div id="ecclesiasticalendorsement" class="answer accordion">
@@ -154,24 +154,22 @@
 				</div>
 				<h4 class="accordion-heading">I missed the application deadline. Can I still be admitted?</h4>
 				<div id="misseddeadline" class="answer accordion">
-					<p>Applicants who miss the application deadline will need to wait until the next available start date. To find out the next time Pathway will begin in an area, applicants should contact their <a href="https://pathway.lds.org/finder/world">local Pathway missionaries</a>.<br/>
+					<p>Applicants who miss the application deadline will need to wait until the next available start date. To find out the next time Pathway will begin in an area, applicants should contact their <a target="_blank" href="https://pathway.lds.org/finder/world">local Pathway missionaries</a>.<br/><br/>
 					Rare exceptions to the application deadline are made for full-time missionaries who return home after a deadline has passed, and for other similar extenuating circumstances. Applicants who want to be considered for a special exception must <a href="">submit a request</a>.</p>
 				</div>
-			</div>
+			</div><br/><br/>
 			<div id="moreregistration" class="hero pf-page-header show">
-				<img alt="icon" src="/working-build/img/contact-us/Have-a-Question/Enrollment-Icon-Mini.png" />
-				<h5 class="heading orange">Applying to Pathway</h5>
-				<h1 class="heading" id="Standard">Course Registration</h1>
+				<h2 class="heading" id="Standard">Course Registration</h2>
 			</div>
 			<div class="pf-section show">
 				<h4 class="accordion-heading">How do I register for classes?</h4>
 				<div id="howtoregister" class="answer accordion">
-					<p>Students entering their first semester of Pathway are automatically registered for their courses when they accept thei offer of admission.<br/>
-					Students entering their second and third semesters register for their courses by signing in at <a href="https://pathway.lds.org">pathway.lds.org</a>. During the course registation period each semester, students will see an item in their "To Do" list prompting them to enroll in next semester's courses. Students can click the link and follow the directionsprovided.</p>
+					<p>Students entering their first semester of Pathway are automatically registered for their courses when they accept thei offer of admission.<br/><br/>
+					Students entering their second and third semesters register for their courses by signing in at <a target="_blank" href="https://pathway.lds.org">pathway.lds.org</a>. During the course registation period each semester, students will see an item in their "To Do" list prompting them to enroll in next semester's courses. Students can click the link and follow the directionsprovided.</p>
 				</div>
 				<h4 class="accordion-heading">Which course(s) do I take?</h4>
 				<div id="courses" class="answer accordion">
-					<p>Students can log in at <a href="https://pathway.lds.org">pathway.lds.org</a> and view their current courses and see which courses they will take in the future.</p>
+					<p>Students can log in at <a target="_blank" href="https://pathway.lds.org">pathway.lds.org</a> and view their current courses and see which courses they will take in the future.</p>
 				</div>
 				<h4 class="accordion-heading">What is the deadline to register for courses?</h4>
 				<div id="deadline" class="answer accordion">
@@ -179,23 +177,21 @@
 				</div>
 				<h4 class="accordion-heading">What happens if I miss the deadline to register for courses?</h4>
 				<div id="misseddeadlineregister" class="answer accordion">
-					<p>Students who miss the course registration deadline will not be able to participate in Pathway during the upcoming semester. They may, however, rejoin Pathway in a future semester. Students in this situation should contact <a href="https://pathway.lds.org/main/advisingandsupport">Pathway Support</a> to discuss options.<br/>
+					<p>Students who miss the course registration deadline will not be able to participate in Pathway during the upcoming semester. They may, however, rejoin Pathway in a future semester. Students in this situation should contact <a target="_blank" href="https://pathway.lds.org/main/advisingandsupport">Pathway Support</a> to discuss options.<br/>
 					Rare exceptions to the course registration deadline are made for missionaries who return home after a deadline has passed, and for other similar extenuating circumstances. Applicants who want to be considered for a special exception must <a href="">submit a request</a>.</p>
 				</div>
-			</div>
+			</div><br/><br/>
 			<div id="morepelp" class="hero pf-page-header show">
-				<img alt="icon" src="/working-build/img/contact-us/Have-a-Question/Enrollment-Icon-Mini.png" />
-				<h5 class="heading orange">Applying to Pathway</h5>
-				<h1 class="heading" id="Standard">PELP (English Proficiency Assessment)</h1>
+				<h2 class="heading" id="Standard">PELP (English Proficiency Assessment)</h2>
 			</div>
 			<div class="pf-section show">
 				<h4 class="accordion-heading">What is the PELP?</h4>
 				<div id="whatispelp" class="answer accordion">
-					<p>The Pathway English Language Proficiency assessment (PELP) assesses an individual's ability to succeed in Pathway's courses, which are facilitated entirely in English. Applicants who need to take the PELP are identified during the process of applying to Pathway, and the PELP is administered as part of the application.<br/>
+					<p>The Pathway English Language Proficiency assessment (PELP) assesses an individual's ability to succeed in Pathway's courses, which are facilitated entirely in English. Applicants who need to take the PELP are identified during the process of applying to Pathway, and the PELP is administered as part of the application.<br/><br/>
 					A student's PELP score determines his/her ability for admission to Pathway. Individual who are admitted will be assigned to a version:
 					<ul>
-						<li><a href="https://pathway.lds.org/main/standard">Standard</a> (for individuals who are fluent in English)</li>
-						<li><a href="https://pathway.lds.org/main/language">L</a> (for individuals with intermediate-low English proficiency)</li>
+						<li><a target="_blank" href="https://pathway.lds.org/main/standard">Standard</a> (for individuals who are fluent in English)</li>
+						<li><a target="_blank" href="https://pathway.lds.org/main/language">L</a> (for individuals with intermediate-low English proficiency)</li>
 					</ul></p>
 				</div>
 				<h4 class="accordion-heading">Why do I have to take the PELP?</h4>
@@ -214,36 +210,34 @@
 				<div id="improveenglish" class="answer accordion">
 					<p>Yes, the following free resources are available:
 					<ul>
-						<li>BYU Provo Independant Study English Course: <a href="http://is.byu.edu/courses/pe/999055072002/public/start.htm">http://is.byu.edu/courses/pe/999055072002/public/start.htm</a>
+						<li>BYU Provo Independant Study English Course: <a target="_blank" href="http://is.byu.edu/courses/pe/999055072002/public/start.htm">http://is.byu.edu/courses/pe/999055072002/public/start.htm</a>
 							<ul>
 								<li>Click on "Begin Course", then "Accept". Students will then be asked for some additional information that will help BYU assess future independent study courses.</li>
 							</ul>
 						</li>
-						<li>Learn English by watching videos: <a href="http://videoenglish.wordpress.com">http://videoenglish.wordpress.com</a></li>
-						<li>Randall's ESL cyber listening lab: <a href="http://esl-lab.com">http://esl-lab.com</a></li>
-						<li>Duolingo: <a href="https://www.duolingo.com">https://www.duolingo.com</a></li>
-						<li>USA Learns: <a href="http://www.usalearns.org">http://www.usalearns.org</a></li>
-						<li>Online English placement test: <a href="http://esltutor.net/quick-placement-test">http://esltutor.net/quick-placement-test</a></li>
+						<li>Learn English by watching videos: <a target="_blank" href="http://videoenglish.wordpress.com">http://videoenglish.wordpress.com</a></li>
+						<li>Randall's ESL cyber listening lab: <a target="_blank" href="http://esl-lab.com">http://esl-lab.com</a></li>
+						<li>Duolingo: <a target="_blank" href="https://www.duolingo.com">https://www.duolingo.com</a></li>
+						<li>USA Learns: <a target="_blank" href="http://www.usalearns.org">http://www.usalearns.org</a></li>
+						<li>Online English placement test: <a target="_blank" href="http://esltutor.net/quick-placement-test">http://esltutor.net/quick-placement-test</a></li>
 					</ul></p>
 				</div>
-			</div>
+			</div><br/><br/>
 			<div id="morereturn" class="hero pf-page-header show">
-				<img alt="icon" src="/working-build/img/contact-us/Have-a-Question/Enrollment-Icon-Mini.png" />
-				<h5 class="heading orange">Applying to Pathway</h5>
-				<h1 class="heading" id="Standard">Returning Students</h1>
+				<h2 class="heading" id="Standard">Returning Students</h2>
 			</div>
 			<div class="pf-section show">
 				<h4 class="accordion-heading">Do I have to start all over if I cannot attend a semester of Pathway?</h4>
 				<div id="startover" class="answer accordion">
-					<p>No, students keep all credits they obtain form completed Pathway courses. Students who take one or more semesters off will need to reapply when they decide to rejoin Pathway. Students in this situation should contact <a href="https://pathway.lds.org/main/advisingandsupport">Pathway Support</a> for additional information and details.</p>
+					<p>No, students keep all credits they obtain from completed Pathway courses. Students who take one or more semesters off will need to reapply when they decide to rejoin Pathway. Students in this situation should contact <a target="_blank" href="https://pathway.lds.org/main/advisingandsupport">Pathway Support</a> for additional information and details.</p>
 				</div>
 			</div>
 			<div class="pf-section show">
 				<h4 class="accordion-heading">I attended Pathway previously and didn't finish. How do I get back in?</h4>
 				<div id="getback" class="answer accordion">
-					<p>Students who take one or more semesters off will need to reapply when they decide to rejoin Pathway. Students in this situation should contact <a href="https://pathway.lds.org/main/advisingandsupport">Pathway Support</a> for additional information and details.</p>
+					<p>Students who take one or more semesters off will need to reapply when they decide to rejoin Pathway. Students in this situation should contact <a target="_blank" href="https://pathway.lds.org/main/advisingandsupport">Pathway Support</a> for additional information and details.</p>
 				</div>
-			</div>
+			</div><br/><br/>
 
 		</div>
 	</div>
