--- a/pages/contact-us/self-help-page.html
+++ b/pages/contact-us/self-help-page.html
@@ -29,7 +29,7 @@
 	<!-- Bootstrap Core CSS -->
 	<link href="/working-build/dist/css/bootstrap.min.css" rel="stylesheet">
 	<!-- Page Specific Stylesheet -->
-	<link href="/working-build/styles/self_help_page.css" rel="stylesheet">
+	<link href="/working-build/styles/help.css" rel="stylesheet">
 </head>
 <body>
 <!-- Header Start -->
@@ -38,7 +38,7 @@
     <ul class="nav orange-bar">
       <li class="header-column visible-xs pull-left">&nbsp;</li>
       <li class="header-column pull-left"> <a id="pathway-logo" title="pathway logo" class="navbar-brand img-responsive hidden-xs" href="/working-build/"><span class="sr-only">Pathway: In Partnership With BYU-Idaho</span></a> <a id="pathway-mobile-logo" title="pathway mobile logo" class="center-block navbar-brand visible-xs" href="index.htm"><span class="sr-only">Pathway: In Partnership With BYU-Idaho</span></a></li>
-      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="/working-build/pages/contact-us/have-a-question.html">Contact Us <img src="/working-build/img/speechbubble.png" width="13" height="11" alt="speech"></a>
+      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="/working-build/pages/contact-us/help.html">Contact Us <img src="/working-build/img/speechbubble.png" width="13" height="11" alt="speech"></a>
        <form class="navbar-right pull-right ng-pristine ng-valid">
         <!-- Sign-in / User button -->
         <div class="btn-group">
@@ -91,9 +91,9 @@
         <div id="breadCrumb" class="breadCrumb module">
             <ul>
                 <li class="first"><a href="/working-build/">Home</a></li>
-                <li  class="last" >Self Help Page</li>
+                <li ><a href="/working-build/pages/contact-us/help.html">Help</a></li>
                 
-                <li class="last"></li> 
+                <li class="last">Self Help Page</li> 
             </ul>
         </div>
     </div>
@@ -102,26 +102,24 @@
 
 
 <!-- Start to the content area -->
-<div id="main-container" class="container">
+<div id="main-container" class="container self-help-page">
 	<div class="row row-offcanvas row-offcanvas-right">
 		<div class="col-xs-12">
 
 			<div id="others-disabilities" class="hero pf-page-header show">
-				<img alt="icon" src="/working-build/img/contact-us/Have-a-Question/" />
-				<h5 class="heading ">Other Topics</h5>
-				<h1 class="heading" id="Standard">Disabilities</h1>
+				<img alt="icon" src="/working-build/img/contact-us/Other-Topics.png" />
+				<h1 class="heading ">Other Topics</h1>
+				<h2 class="heading" id="Standard">Disabilities</h2>
 			</div>
 			<div class="pf-section show">
 				<h4 class="accordion-heading">Are disability accommodations available to Pathway students?</h4>
 				<div id="accommodations" class="answer accordion">
 					<p>Disability accommodations may be available to students who qualify. For more information, visit <a href="www.byui.edu/disabilities/pathway-and-disabilities">www.byui.edu/disabilities/pathway-and-disabilities</a>.</p>
 				</div>
-			</div>
+			</div><br/><br/>
 
 			<div id="others-general" class="hero pf-page-header show">
-				<img alt="icon" src="/working-build/img/contact-us/Have-a-Question/" />
-				<h5 class="heading ">Other Topics</h5>
-				<h1 class="heading" id="Standard">PATH</h1>
+				<h2 class="heading" id="Standard">PATH</h2>
 			</div>
 			<div class="pf-section show">
 				<h4 class="accordion-heading">What is PATH?</h4>
@@ -132,39 +130,37 @@
 			<div class="pf-section show">
 				<h4 class="accordion-heading">How can I see new applicants to my Pathway site?</h4>
 				<div id="findnewapplicants" class="answer accordion">
-					<p>Missionaries can track new applicants under the “Site Manager” link in Pathway’s administrative system. Click <a href="http://www.byui.edu/Documents/Admin_Offices/Online Learning/Pathway/PATH_Trainings/Student Tracker.pdf">here</a> for a tutorial.</p>
+					<p>Missionaries can track new applicants under the “Site Manager” link in Pathway’s administrative system. Click <a target="_blank" href="http://www.byui.edu/Documents/Admin_Offices/Online Learning/Pathway/PATH_Trainings/Student Tracker.pdf">here</a> for a tutorial.</p>
 				</div>
 			</div>
 			<div class="pf-section show">
 				<h4 class="accordion-heading">How can I find a student’s phone number and email address?</h4>
 				<div id="studentcontactinfo" class="answer accordion">
-					<p>Missionaries can view student information under the “Site Manager” link in Pathway’s administrative system. Click <a href="http://www.byui.edu/Documents/Admin_Offices/Online Learning/Pathway/PATH_Trainings/Student Course Sequence in PATH.pdf">here</a> for a tutorial.</p>
+					<p>Missionaries can view student information under the “Site Manager” link in Pathway’s administrative system. Click <a target="_blank" href="http://www.byui.edu/Documents/Admin_Offices/Online Learning/Pathway/PATH_Trainings/Student Course Sequence in PATH.pdf">here</a> for a tutorial.</p>
 				</div>
 			</div>
 			<div class="pf-section show">
 				<h4 class="accordion-heading">How do I set up groups?</h4>
 				<div id="setgroups" class="answer accordion">
-					<p>Typically, only lead missionaries will set up groups. Click <a href="http://www.byui.edu/Documents/Admin_Offices/Online Learning/Pathway/PATH_Trainings/Creating and Assigning Groups.pdf">here</a> for a tutorial.</p>
+					<p>Typically, only lead missionaries will set up groups. Click <a target="_blank" href="http://www.byui.edu/Documents/Admin_Offices/Online Learning/Pathway/PATH_Trainings/Creating and Assigning Groups.pdf">here</a> for a tutorial.</p>
 				</div>
 			</div>
 			<div class="pf-section show">
 				<h4 class="accordion-heading">How do I access “New Missionary Orientation” or other training resources?</h4>
 				<div id="trainingresources" class="answer accordion">
-					<p>Missionaries can access most Pathway training resources <a href="http://www.byui.edu/pathway/trainings">here</a>. </p>
+					<p>Missionaries can access most Pathway training resources <a target="_blank" href="http://www.byui.edu/pathway/trainings">here</a>. </p>
 				</div>
-			</div>
+			</div><br/><br/>
 
 			<div id="others-student-honor" class="hero pf-page-header show">
-				<img alt="icon" src="/working-build/img/contact-us/Have-a-Question/" />
-				<h5 class="heading ">Other Topics</h5>
-				<h1 class="heading" id="Standard">Student Honor</h1>
+				<h2 class="heading" id="Standard">Student Honor</h2>
 			</div>
 			<div class="pf-section show">
 				<h4 class="accordion-heading">Are Pathway students required to live the BYU-Idaho Honor Code?</h4>
 				<div id="honorcode" class="answer accordion">
 					<p>Pathway students are encouraged to strive to live the BYU-Idaho Honor Code, but are not required to do so as a condition of enrollment. (However, Pathway students who join the BYU-Idaho Online Degree Program after Pathway will be required to live the BYU-Idaho Honor Code.)</p>
 				</div>
-			</div>
+			</div><br/><br/>
 
 		</div>
 	</div>
